[tool.poetry]
name = "tdd project store"
version = "0.0.1"
description = ""
authors = ["Pedro <pedroabreu6497@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "^0.104.1"
uvicorn = "^0.24.0.post1"
pydantic = "^2.5.1"
pydantic-settings = "^2.1.0"
motor = "^3.3.1"
pytest = "^7.4.3"
pytest-asyncio = "^0.21.1"
pre-commit = "^3.5.0"
favicon = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
